--- a/src/App.html
+++ b/src/App.html
@@ -268,7 +268,7 @@
                  * @cfg {String}
                  * Base url for all Github api requests.
                  */
-                apiUrl: 'https://api.github.paypal.com',
+                apiUrl: 'https://github.paypal.com/api/v3',
             
                 /**
                  * @cfg {Int}
